--- a/users/templates/registration/profile.html
+++ b/users/templates/registration/profile.html
@@ -4,15 +4,30 @@
 
 {% block content %}
 
-<h1>Your personal data</h1>
-
-<p>Login:</p>
-<p>{{ user.username }}</p>
-
-<p>Email:</p>
-<p>{{ user.email }}</p>
-
-<p>Balance:</p>
-<p>{{ user.wallet }} UAH</p>
+<main class="form-auth form-signin w-100 m-auto">
+    <div class="container mt-4">
+        <div class="row justify-content-center mt-5">
+            <div class="col-md-6">
+                <h1 class="h3 mb-3 fw-normal">Your personal data</h1>
+                <div class="card">
+                    <div class="card-body">
+                        <div class="form-group">
+                            <p>Login:</p>
+                            <p class="form-control-plaintext">{{ user.username }}</p>
+                        </div>
+                        <div class="form-group">
+                            <p>Email:</p>
+                            <p class="form-control-plaintext">{{ user.email }}</p>
+                        </div>
+                        <div class="form-group">
+                            <p>Balance:</p>
+                            <p class="form-control-plaintext">{{ user.wallet }} UAH</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</main>
 
 {% endblock %}
