--- a/users/templates/registration/login.html
+++ b/users/templates/registration/login.html
@@ -2,24 +2,38 @@
 
 {% block title %}Login{% endblock %}
 
+
 {% block content %}
+<main class="form-auth form-signin w-100 m-auto">
+    <div class="container mt-4">
+        <div class="row justify-content-center mt-5">
+            <div class="col-md-6">
+                <div class="card">
+                    <div class="card-body">
+                        <form action="" method="post">
+                            {% csrf_token %}
+                            <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
 
-<form action="" method="post">
-    {% csrf_token %}
-    <h1>Please sign in</h1>
-    <div>
-        <label for="{{ form.username.id_for_label }}">Username:</label>
-        {{ form.username }}
-    </div>
-    <div>
-        <label for="{{ form.password.id_for_label }}">Password:</label>
-        {{ form.password }}
-    </div>
-    <div>
-        <p>Have no account?</p>
-        <a href="{% url "signup" %}">Sign up now</a>
-    </div>
-    <button type="submit">Sign in</button>
-</form>
+                            {% for field in form %}
+                            <div class="mb-3">
 
+                                <div class="form-floating">
+                                    {{ field }}
+                                    <label for="{{ field.id_for_label }}" class="form-label">{{ field.label }}</label>
+                                </div>
+                            </div>
+                            {% endfor %}
+
+                            <div class="my-3">
+                                <p>Have no account?</p>
+                                <a href="{% url "signup" %}" class="text-body fw-bold">Sign up now</a>
+                            </div>
+                            <button type="submit" class="btn btn-primary my-2 my-sm-0">Sign in</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</main>
 {% endblock %}
