all business logic was created

--- a/templates/_navbar.html
+++ b/templates/_navbar.html
@@ -2,10 +2,59 @@
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
+        <a class="navbar-brand" href="{% url 'seances_today' %}">Popcorn Cinema</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
+                aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav">
 
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="{% url 'seances_today' %}">Home</a>
+                </li>
+
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                       aria-expanded="false">
+                        Schedule
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" href="{% url 'seances_today' %}">Today</a></li>
+                        <li><a class="dropdown-item" href="{% url 'seances_tomorrow' 1 %}">Tomorrow</a></li>
+                    </ul>
+                </li>
+
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'all_seances' %}">Seances</a>
+                </li>
+
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'all_films' %}">Films</a>
+                </li>
+
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'all_halls' %}">Halls</a>
+                </li>
+
+                {% if user.is_superuser %}
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                       aria-expanded="false">Add</a>
+                    <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" href="{% url 'add_film' %}">Film</a></li>
+                        <li><a class="dropdown-item" href="{% url 'add_hall' %}">Hall</a></li>
+                        <li><a class="dropdown-item" href="{% url 'add_seance' %}">Seance</a></li>
+                    </ul>
+                </li>
+                {% endif %}
+
                 {% if user.is_authenticated %}
+                {% if not user.is_superuser %}
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'all_tickets' %}">My tickets</a>
+                </li>
+                {% endif %}
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'profile' %}">Profile</a>
                 </li>
