--- a/users/templates/registration/login.html
+++ b/users/templates/registration/login.html
@@ -2,7 +2,6 @@
 
 {% block title %}Login{% endblock %}
 
-
 {% block content %}
 <main class="form-auth form-signin w-100 m-auto">
     <div class="container mt-4">
@@ -13,17 +12,14 @@
                         <form action="" method="post">
                             {% csrf_token %}
                             <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
-
-                            {% for field in form %}
                             <div class="mb-3">
-
-                                <div class="form-floating">
-                                    {{ field }}
-                                    <label for="{{ field.id_for_label }}" class="form-label">{{ field.label }}</label>
-                                </div>
+                                <label for="{{ form.username.id_for_label }}" class="form-label">Username:</label>
+                                {{ form.username }}
                             </div>
-                            {% endfor %}
-
+                            <div class="mb-3">
+                                <label for="{{ form.password.id_for_label }}" class="form-label">Password:</label>
+                                {{ form.password }}
+                            </div>
                             <div class="my-3">
                                 <p>Have no account?</p>
                                 <a href="{% url "signup" %}" class="text-body fw-bold">Sign up now</a>
