--- a/users/templates/registration/profile.html
+++ b/users/templates/registration/profile.html
@@ -19,10 +19,16 @@
                             <p>Email:</p>
                             <p class="form-control-plaintext">{{ user.email }}</p>
                         </div>
+                        {% if not user.is_superuser %}
                         <div class="form-group">
                             <p>Balance:</p>
                             <p class="form-control-plaintext">{{ user.wallet }} UAH</p>
                         </div>
+                        <div class="form-group">
+                            <p>Total spent:</p>
+                            <p class="form-control-plaintext">{{ user.total_sum }} UAH</p>
+                        </div>
+                        {% endif %}
                     </div>
                 </div>
             </div>
